yoshimi 2.2.0 rc2

2022-5-11 Will
bn2130
* Changed cmake policy CMP0072 from OLD to NEW.
* Added tooltip to Edit button.

bn2129
* Applied patch from Hermann for compiling with clang.
* Changed randWalkWindow_retext() to randRtext()
* doc updates.
* Set release candidate 2.2.0 rc2

2022-5-9 Will
bn2128
* Merged in altmain with adjusted main window.
* BugFix: CLI drum mode control in wrong place.
* Suppressed compiler warning in BuildScheduler.h
* Updated docs and User guide.
* Set release candidate 2.2.0 rc1

2022-5-1 Will
bn2127
* Minor tweaks to the main window.

2022-4-30 Will
bn2126
* Included Hermans updates to the User Guide
* Minor adjustments to User Guide and various text files.

bn2125
* More additions/corrections to notes.
* Added Theatre Organ to Companion bank.

2022-4-29 Will
bn2124
* GUI main window adjustments.
* doc updates.
* User Guide updates.

2022-4-28 Will
bn2123
* Reverted Resonance undo speedup test - caused odd issues.
* Further Adjustments to User Guide
* Initial preparation for Release of V 2.2.0

2022-4-27 Will
bn2122
* BugFix: previous change caused lockup of partUI insert.

2022-4-26 Will
bn2121
* Small GUI cleanups.
* Updates to Yoshimi Control Numbers.pdf
* Moved buildpush and incbuildnumber.py out of repository.

2022-4-24 Will
bn2120
* Added undoRedoClear() if deleting a kit line.
  Removed this from overal kit enabling.
* Added warnings to various GUI actions that could disrupt undo/redo behavoir.

2022-4-23 Will
bn2119
* Adjusted position of Random Walk controls.
* Updated User Guide Image.
* Swapped order of some of these entries.
  Makes more sense!

bn2118
* Changed Random Walk window to horizontal layout.
* Revised Config window layout.
* Initial update to User Guide for new features.

2022-4-23 Will
bn2117
* Bugfix: New FLTK commands not disabled for headless build.

bn2116
* Bugfix: Missing random walk exit branch when loading instrument.

2022-4-22 Will
bn2115
* Revised position of new controls in PadSynth window.