@@ -118,7 +118,7 @@
             <b>Preset</b> select a default preset and set controls accordingly
         </li>
         <li>
-            <b>Subtract</b> Inverts the output if selected
+            <b>Subtract</b> Inverts the output if selected so it tends to subtract from the incoming signal rather than adding to it.
         </li>
         <li>
             <b>D/W</b> Dry/Wet balance. If completely to the left only the dry signal (no chorus) will be heard
