@@ -1,1 +1,1 @@
-2.2.0 rc2
+2.2.0 rc3
