@@ -45,7 +45,7 @@ add_definitions(-Wno-vla) # Nothing wrong with variable length arrays
 add_definitions(-Wno-deprecated)
 # ^^^ comment these out on release pushes
 
-set (YOSHIMI_VERSION "2.2.0 rc2")
+set (YOSHIMI_VERSION "2.2.0 rc3")
 
 add_definitions (-DMIN_CONFIG_MAJOR=2)
 add_definitions (-DMIN_CONFIG_MINOR=0)
