@@ -815,7 +815,7 @@ static std::string phaserlist [] = {
     "CROssover <n>",    "L/R routing",
     "SUBtract <s>",     "invert output (ON {other})",
     "RELative <n>",     "relative phase",
-    "HYPer <s>",        "hyper ?  (ON {other})",
+    "HYPer <s>",        "hyper sine (ON {other})",
     "OVErdrive <n>",    "distortion",
     "ANAlog <s>",       "analog emulation (ON {other})",
     "BPM <s>",          "LFO BPM sync (ON {other})",
@@ -848,7 +848,7 @@ static std::string distortionlist [] = {
     "OUTput <n>",       "output balance",
     "WAVe <s>",         "function waveshape",
     "-","(ATAn, ASYm1, POWer, SINe, QNTs, ZIGzag, LMT, ULMt, LLMt, ILMt, CLIp, AS2, PO2, SGM)",
-    "INVert <s>",       "invert ?  (ON {other})",
+    "INVert <s>",       "subtracts from the main signal instead of adding  (ON {other})",
     "LOW <n>",          "low pass filter",
     "HIGh <n>",         "high pass filter",
     "STEreo <s>",       "stereo (ON {other})",
